# quantmap

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.txt  MANIFEST.in  README.md  hwinfo_diag.py  pyproject.toml  quantmap.py  requirements.txt  rescore.py  seed_test_data.py  sonar-project.properties  test_acpm_slice1.py  test_acpm_slice3.py  test_acpm_slice4.py  test_acpm_slice5.py  test_acpm_slice6.py  test_analyze_campaign.py  test_artifact_contract.py  test_backends_contracts.py  test_backends_lifecycle_llamacpp.py  test_backends_public_api_surface.py  test_campaign_definition.py  test_campaign_outcome_slice1.py  test_cli_ux_acpm_entry.py  test_cli_ux_acpm_run.py  test_cli_ux_artifact_discovery.py  test_cli_ux_guided_shell.py  test_cli_ux_post_run_review.py  test_cli_ux_yolo_review.py  test_determinism.py  test_effective_filter_policy.py  test_governance.py  test_measure.py  test_package_metadata.py  test_runner_backend_lifecycle_integration.py  test_runner_campaign_outcome_hardening.py  (+1 more)
.agent/: README.md
.agent/docs/: dev-contract.md
.agent/instructions/: agent_command_catalog.md  agent_maintenance.md  agent_session_bootstrap.md  commit-instructions.md  implementation_mode_harness.md  investigation_only_harness.md
.agent/policies/: adversarial.md  architecture.md  boundaries.md  project.md  routing.md  testing.md  tooling.md  workflow.md
.agent/reference/: command_reference.md  terminal_guardrails.md
.agent/scripts/: agent_surface_audit.py  agent_workflow_smokecheck.py  changed_path_verify.py  generate_agent_handoff.py  refresh_bug_gate_list.py
.agent/scripts/helpers/: _ast_utils.py  _gh_client.py  ci_summary_digest.py  codeql_digest.py  fetch_pr14_data.py  git_symbol_summary.py  mypy_digest.py  pip_audit_digest.py  review_bot_digest.py  signature_dump.py  sonar_digest.py  terminal_guardrail_selftest.py  terminal_preflight_check.py  verify_dev_contract.py
.copilot/instructions/: quantmap-agent.instructions.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/instructions/: quantmap-agent.instructions.md
.github/workflows/: ci.yml  codeql.yml
configs/: baseline.yaml  metrics.yaml
configs/baselines/: devstral_small_2507_q5_k_m.yaml
configs/campaigns/: A_fatal.yaml  B_low_sample.yaml  C01_threads_batch.yaml  C02_n_parallel.yaml  C03_kv_cache_type.yaml  C04_context_size.yaml  C05_threads.yaml  C06_ubatch.yaml  C07_batch.yaml  C08_interaction.yaml  C09_tensor_placement.yaml  C10_mmap.yaml  C11_cpu_affinity.yaml  C12_mlock.yaml  C13_defrag_thold.yaml  C14_cont_batching.yaml  C15_threads_http.yaml  C_all_fail.yaml  D_one_passes.yaml  Finalist.yaml  NGL_sweep.yaml
configs/profiles/: acpm_balanced_v1.yaml  acpm_ts_v1.yaml  acpm_ttft_v1.yaml  default_throughput_v1.yaml
docs/: QuantMap MVP Audit Tracker.md  README.md  quantmap_mvp_decisions_and_reporting_contract.md
docs/AUDITS/Post-Run-Review-UX/: Post-Run-Review-UX-Blast-Radius-Audit.md  Post-Run-Review-UX-Slice-2-Blast-Radius-Audit.md
docs/Plans/: README.md
docs/Plans/Advanced-Campaign-Planning-Mode/: ACPM-Decision-Extraction-Matrix.md  ACPM-v1-Decision-Baseline.md
docs/Plans/Artifact-System-Plan/: Artifact-System-Closeout-Containment-Assessment.md  Artifact-System-Upgrade.md
docs/Plans/CLI-UX/: CLI-UX-1-Guided-Run-Shell-PREP-Implementation-Plan.md  CLI-UX-1-Guided-Run-Shell-Validation.md  CLI-UX-2-Campaign-and-Artifact-Discovery-PREP-Implementation-Plan.md  CLI-UX-3-ACPM-Entry-and-Invocation-PREP-Implementation-Plan.md  CLI-UX-3-ACPM-Entry-and-Invocation-Validation.md  CLI-UX-4-ACPM-Run-Execution-PREP-Implementation-Plan.md  (+6 more)
docs/decisions/: 2026-04-10-readiness-and-diagnostics.md  2026-04-10-scoring-and-elimination.md  Current-Phase-Status-and-Roadmap-Alignment.md  Phase-2-Final-Closure-Pass.md  Phase-2-Operational-Robustness-Closure-Validation-Memo.md  Phase-2-Operational-Robustness-Interrogation.md  Phase-2.1-Bridge-Recommendation.md  Phase-3-Linux-NVIDIA-Safety-Decision-Note.md  Phase-3-Platform-Generalization-Hardening-and-Validation-Memo.md  Phase-3-Platform-Generalization-Interrogation.md  Phase-3-WSL-Degraded-Support-Decision-Memo.md  Phase-3-WSL-Degraded-Support-Implementation-Validation-Memo.md  Phase-3-WSL-Linux-Native-Backend-Smoke-Validation-Memo.md  README.md
docs/playbooks/: README.md  compare.md  environment.md  forensics.md  quickstart.md  rescore_and_migration.md  tuning.md
docs/system/: TO-DO.md  architecture.md  command_reference.md  contributing.md  database_schema.md  known_issues_tracker.md  methodology_lifecycle.md  trust_surface.md
requests/: quality_code.json  quality_reasoning.json  speed_medium.json  speed_short.json
src/: __init__.py  acpm_planning.py  acpm_recommendation.py  analyze.py  artifact_paths.py  artifact_registry.py  audit_methodology.py  backend_execution_policy.py  campaign_definition.py  characterization.py  code_identity.py  compare.py  config.py  db.py  diagnostics.py  doctor.py  effective_filter_policy.py  execution_environment.py  explain.py  export.py  governance.py  init.py  measure.py  report.py  report_campaign.py  report_compare.py  run_context.py  run_plan.py  runner.py  score.py  selftest.py  server.py  settings_env.py  telemetry.py  telemetry_hwinfo.py  telemetry_nvml.py  telemetry_policy.py  telemetry_provider.py  trust_identity.py  ui.py  (+1 more)
src/backends/: __init__.py  contracts.py  lifecycle.py  llamacpp.py
src/campaign_outcome/: __init__.py  contracts.py  evaluate.py  projection.py
(+69 files in other folders)
