[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmap"
version = "0.9.0"
description = "QuantMap: LLM Quantization & Inference Benchmarking Governance Tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Josh", email = "deepthought8342@gmail.com"}
]
keywords = ["llm", "quantization", "benchmarking", "governance"]
dependencies = [
    "httpx[http2]>=0.27.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "nvidia-ml-py>=12.560.30",
    "psutil>=6.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
quantmap = "quantmap:main"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["build/", "quantmap.egg-info/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (bug detection)
    "S",      # flake8-bandit (security)
    "C90",    # mccabe (complexity)
    "D",      # pydocstyle (docstrings)
    "TRY",    # tryceratops (exception handling)
    "RUF",    # ruff-specific rules
]
ignore = [
    "D100",   # Missing module docstring
    "D104",   # Missing package docstring
    "E501",   # Line too long (handled by line-length)
    "S101",   # Use of assert (acceptable in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = ["build/", "quantmap.egg-info/"]

[tool.setuptools]
packages = ["src", "configs", "requests"]
py-modules = ["quantmap", "rescore"]
include-package-data = true

[tool.setuptools.package-data]
configs = ["*.yaml", "profiles/*.yaml"]
requests = ["*.json"]
