[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantmap"
version = "0.9.0"
description = "QuantMap: LLM Quantization & Inference Benchmarking Governance Tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Josh", email = "deepthought8342@gmail.com"}
]
keywords = ["llm", "quantization", "benchmarking", "governance"]
dependencies = [
    "httpx[http2]>=0.27.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "nvidia-ml-py>=12.560.30",
    "psutil>=6.0.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
    "types-psutil",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
quantmap = "quantmap:main"

[tool.setuptools]
packages = ["src", "configs", "requests"]
py-modules = ["quantmap", "rescore"]
include-package-data = true

[tool.setuptools.package-data]
configs = ["*.yaml", "profiles/*.yaml"]
requests = ["*.json"]

[tool.mypy]
exclude = [
    '(^|[\\/])build([\\/]|$)',
    '(^|[\\/])dist([\\/]|$)',
    '(^|[\\/])[^\\/]+\.egg-info([\\/]|$)',
    '(^|[\\/])tools([\\/]|$)',
    '(^|[\\/])\.venv([\\/]|$)',
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml:coverage.xml"
